--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,25 @@
+# Django core
 Django>=4.2.0,<5.0.0
 djangorestframework>=3.14.0
-psycopg2-binary>=2.9.0
-python-dotenv>=1.0.0
-django-cors-headers>=4.3.0
-drf-yasg>=1.21.7
-scikit-learn>=1.3.0
-numpy>=1.24.0
 djangorestframework-simplejwt>=5.3.0
-hypothesis>=6.92.0
+django-cors-headers>=4.3.0
+
+# Database
+psycopg2-binary>=2.9.0
+dj-database-url>=2.1.0
+
+# Production server
+gunicorn>=21.0.0
+whitenoise>=6.6.0
+
+# Environment & Security
+python-dotenv>=1.0.0
 cryptography>=41.0.0
+
+# HTTP requests (used for all LLM API calls)
 requests>=2.31.0
-openai>=1.0.0
-anthropic>=0.18.0
-google-generativeai>=0.3.0
-google-genai>=0.3.0
+
+# File parsing
 beautifulsoup4>=4.12.0
-playwright>=1.40.0
 PyPDF2>=3.0.0
 python-docx>=1.0.0
-gunicorn>=21.0.0
-dj-database-url>=2.1.0
-whitenoise>=6.6.0
